styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Montserrat", sans-serif;
}

#landing {
  background: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.8) 0%,
      rgba(255, 255, 255, 0.3) 100%
    ),
    url("/images/bulb.jpg");
  background-attachment: fixed;
  object-fit: cover;
  background-size: cover;
  background-position: center;
}

#typeText{
  @apply text-brand;
  overflow: hidden; /* Ensures the content is not revealed until the animation */
  border-right: .15em solid orange; /* The typwriter cursor */
  white-space: nowrap; /* Keeps the content on a single line */
  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
  animation: typewriter 2s steps(20) 1s 1 normal both,
  blinkTextCursor 500ms steps(20) infinite
}

@keyframes typewriter{
  from{width: 0;}
  to{width: 100%;}
}
@keyframes blinkTextCursor{
  from{border-right-color: #ff751a;}
  to{border-right-color: transparent;}
}

.isSticky #navBar {
  background: linear-gradient(
    to left bottom,
    rgba(51, 65, 85, 0.6),
    rgba(148, 163, 184, 0.3)
  );
  @apply text-slate-700;
  @apply h-[60px];
  @apply font-bold;
}

.isSticky #navBar li:hover {
  @apply text-brand;
}

.sexy_line {
  position: relative;
  display: block;
  color: white;
  background: -webkit-gradient(
    radial,
    50% 50%,
    0,
    50% 50%,
    500,
    from(#70c2e7),
    to(hsl(var(--b1)))
  );
}

.modalAnimation {
  animation-duration: 750ms;
  animation-name: modalAnimation;
}

@keyframes modalAnimation {
  0% {
    top: 0;
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

#modalOverlay {
  animation-duration: 500ms;
  animation-name: modalOverlayAnimation;
}

@keyframes modalOverlayAnimation {
  0% {
    bottom: 100%;
  }
  100% {
    animation-name: modalAnimation;
  }
}

.meAnimation {
  animation-duration: 3s;
  animation-name: leftToPositionAnimation;
}

.blueBallAnimation {
  animation-duration: 5s;
  animation-name: fadeAnimation, lightRightToPositionAnimation;
}

.fadeInAnimation {
  animation-duration: 2s;
  animation-name: fadeAnimation, rightToPositionAnimation;
}
.fadeFromTopAnimation {
  animation-duration: 2s;
  animation-name: fadeAnimation, TopToPositionAnimation;
}
.fadeFromBottomAnimation {
  animation-duration: 2s;
  animation-name: fadeAnimation, BottomToPositionAnimation;
}
.fadeAnimation {
  animation-duration: 1s;
  animation-name: fadeAnimation;
}

@keyframes fadeAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes TopToPositionAnimation {
  0% {
    transform: translate(0px, -300px);
  }
  100% {
    transform: translate(0, 0);
  }
}

@keyframes BottomToPositionAnimation {
  0% {
    transform: translate(0px, 300px);
  }
  100% {
    transform: translate(0, 0);
  }
}

@keyframes rightToPositionAnimation {
  0% {
    transform: translate(-200px, 0);
  }
  100% {
    transform: translate(0, 0);
  }
}
@keyframes lightRightToPositionAnimation {
  0% {
    transform: translate(-50px, 0);
  }
  100% {
    transform: translate(0, 0);
  }
}
@keyframes leftToPositionAnimation {
  0% {
    transform: translate(200px, 0);
  }
  100% {
    transform: translate(0, 0);
  }
}

#modal {
  transform: translate(-50%, -50%);
}
#modalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 40;
}

.skillCard:hover .skillIcon {
  @apply bg-green-300;
}

.glowUpAnimation {
  animation-duration: 5s;
  animation-name: borderGlowUp;
}

@keyframes borderGlowUp {
  0% {
    @apply border-slate-300;
  }
  50% {
    @apply border-brand;
  }
  100% {
    @apply border-slate-300;
  }
}

#sectionSeparator {
  background: linear-gradient(
      to bottom,
      rgba(116, 116, 116, 0.8) 0%,
      rgba(0, 0, 15, 0.8) 100%
    ),
    url("/images/coding.jpg");
  background-attachment: fixed;
  object-fit: cover;
  background-size: cover;
  background-position: center, center;
}

#mileStone {
  background: linear-gradient(
      to bottom,
      rgba(116, 116, 116, 0.8) 0%,
      rgba(0, 0, 15, 0.8) 100%
    ),
    url("/images/MileStoneBg.jpg");
  background-attachment: fixed;
}

#titleUnderline::before {
  content: "";
  bottom: 5px;
  width: 150px;
  height: 5px;
  transform: skew(-40deg);
  @apply bg-brand;
}

.contactForm:focus-within {
  @apply text-brand;
}

img {
  object-fit: cover;
  background-size: cover;
  background-position: center, center;
}

.bg-vacation{
  background: linear-gradient(
          to bottom,
          rgba(0, 0, 0, 0.8) 0%,
          rgba(255, 255, 255, 0.2) 100%
  ),
  url("/images/Vacation.jpg");
  object-fit: cover;
  background-size: cover;
  background-position: center;
}
.bg-block{
  background: linear-gradient(to top,rgba(0, 0, 0, 0.8) 0%,rgba(64, 64, 64, 0.4) 100%),
  url("/images/block.jpg");
  object-fit: cover;
  background-size: cover;
  background-position: center;
}

.bg-statistic{
  background: linear-gradient(to top,rgba(0, 0, 0, 0.8) 0%,rgba(64, 64, 64, 0.2) 100%),
  url("/images/statistic.jpg");
  object-fit: cover;
  background-size: cover;
  background-position: center;
}

.bg-portfolio{
  background: linear-gradient(to top,rgba(0, 0, 0, 0.8) 0%,rgba(64, 64, 64, 0.2) 100%),
  url("/images/portfolio.jpg");
  object-fit: cover;
  background-size: cover;
  background-position: center;
}

#footer{
  background: linear-gradient(
          to bottom,
          rgba(0, 0, 0, 0.8) 0%,
          rgba(64, 64, 64, 0.5) 100%
  ),
  url("/images/light.jpg");
  object-fit: cover;
  background-size: cover;
  background-position: center;
}

